<resources>
    <string name="app_name">Retrace</string>
    <string name="title_activity_home">Home</string>

    <!-- Strings related to navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">USER_NAME</string>
    <string name="nav_header_subtitle">VALUABLE INFORMATION??</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_drawer_show_all_folders"> Show All Folders</string>
    <string name="nav_drawer_unplaced"> Unplaced</string>
    <string name="nav_drawer_nwfolder"> New Place</string>
    <string name="nav_drawer_settings"> Settings</string>
    <string name="nav_drawer_about"> About</string>
    <string name="nav_drawer_logout"> Logout</string>

    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="folder_menu_open_place">Open Place Folder</string>
    <string name="folder_menu_edit">Edit Place </string>
    <string name="folder_menu_delete">Delete Place</string>
    <string name="folder_item_newtask"> + New Task</string>
    <string name="three_menu_dots">&#8942;</string>
    <string name="no_folders_message">There are no folders.\nCreate a new one using the + button.</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Login</string>
    <string name="login_welcome">Welcome to Retrace</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Submit</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="hint_email">Email</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>

    <!-- Strings related to Edit/Create Folder -->
    <string name="folder_viewtitle">Add a new folder</string>
    <string name="folder_new_name">Folder Name</string>
    <string name="folder_new_name_hint">New name</string>
    <string name="folder_location">Location</string>
    <string name="folder_add_location">Add Location</string>
    <string name="folder_choose_color">Color</string>
    <string name="folder_choose_color_btn">Choose Folder Color</string>
    <string name="folder_save_button">Save</string>
    <string name="folder_location_error">Location error, please try again.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- About -->
    <string name="about_description">Your favorite app to remember all the things you need to do with the help of the location.</string>
    <string name="about_copyright">Copyright © 2018</string>
    <string name="about_authors">Authors:\nAntonio Tortosa &amp; Ignacio Fite</string>
    <string name="about_go_home">Go Back</string>
</resources>
