<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single"
        android:orderInCategory="0">
        <item
            android:id="@+id/nav_show_all_folders"
            android:icon="@drawable/home"
            android:title="@string/nav_drawer_show_all_folders" />
        <item
            android:id="@+id/nav_new_item"
            android:icon="@drawable/add"
            android:title="@string/nav_drawer_nwfolder" />
    </group>

    <group
        android:id="@+id/lazy_group"
        android:checkableBehavior="single">
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single"
        android:orderInCategory="2147483647">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/nav_drawer_logout" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/nav_drawer_about" />
    </group>


</menu>
